--- a/framework-boot-demo/src/main/resources/application.yml
+++ b/framework-boot-demo/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+server:
+  port: 10085
+  servlet:
+   contextPath: /demo
+spring:
+  application:
+    name: demo
+
 framework:
   app:
     home: /D/Projects/RunData/demo_home
