修改配置文件，将security 配置类独立出来

--- a/framework-boot-demo/pom.xml
+++ b/framework-boot-demo/pom.xml
@@ -50,6 +50,12 @@
 
         <dependency>
             <groupId>com.centit.framework</groupId>
+            <artifactId>framework-security-boot-config</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.centit.framework</groupId>
             <artifactId>framework-core-web</artifactId>
             <version>${project.version}</version>
         </dependency>
