--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>framework-release-dependencies</artifactId>
+        <artifactId>framework-snapshot-dependencies</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>1.2.1901</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.centit.framework</groupId>
