--- a/framework-boot-demo/pom.xml
+++ b/framework-boot-demo/pom.xml
@@ -17,10 +17,10 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
-        <centit.framework.version>4.5.1901</centit.framework.version>
-        <centit.persistence.version>1.2.1901</centit.persistence.version>
-        <centit.commons.version>2.2.1901</centit.commons.version>
-        <centit.ip.version>2.0.1901</centit.ip.version>
+        <centit.framework.version>4.5-SNAPSHOT</centit.framework.version>
+        <centit.persistence.version>1.2-SNAPSHOT</centit.persistence.version>
+        <centit.commons.version>2.2-SNAPSHOT</centit.commons.version>
+        <centit.ip.version>2.0-SNAPSHOT</centit.ip.version>
         <centit.ui.version>3.1.1809</centit.ui.version>
     </properties>
 
