重构代码，将框架的大部分接口迁移到adapter包中

--- a/framework-adapter/pom.xml
+++ b/framework-adapter/pom.xml
@@ -26,6 +26,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <optional>true</optional>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+        <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${jdk.version}</version>
