添加 参数 logout.success.targetUrl

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -68,6 +68,7 @@ login.dao.enable= true
 login.cas.enable= false
 login.cas.localHome = http://localhost:8085/framework
 login.cas.casHome = http://localhost:8080/centit-cas
+logout.success.targetUrl =
 
 #default false
 login.failure.writeLog =
