添加对 国密算法的支持

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <module>framework-security-ldap</module>
         <module>framework-boot-config</module>
         <module>framework-security-boot-config</module>
+        <module>framework-security-gm-plugin</module>
     </modules>
 
     <build>
