添加对 国密算法的支持

--- a/framework-security-gm-plugin/pom.xml
+++ b/framework-security-gm-plugin/pom.xml
@@ -32,6 +32,7 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.64</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
