修改session的冲突

--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -11,7 +11,8 @@
 
     <artifactId>framework-core</artifactId>
     <name>com.centit.framework:framework-core</name>
-    <packaging>jar</packaging>
+
+    <packaging>pom</packaging>
     <description>框架的核心包，整合了多个开源框架，并定义了组织机构和权限体系</description>
 
     <dependencies>
