修改 配置文件

--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -122,8 +122,14 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
