--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -110,10 +110,12 @@ centit.ip.enable = false
 centit.ip.home = http://productsvr.centit.com:8880/centit-ip/service/platform
 centit.ip.topoptid=METAFORM
 
-centit.jdbcplatform.enable = false
-centit.jdbcplatform.url =
-centit.jdbcplatform.username =
-centit.jdbcplatform.password =
+centit.jdbcplatform.enable = true
+centit.jdbcplatform.url =jdbc:oracle:thin:@192.168.131.102:1521:mipdb
+centit.jdbcplatform.username =JSSJTT
+centit.jdbcplatform.password =JSSJTT
+
+jdbc.show.sql=true
 #\u662F\u5426\u5141\u8BB8\u6CE8\u518C\u65B0\u7528\u6237
 webuser.enable=false
 #\u6CE8\u518C\u7528\u6237\u9ED8\u8BA4\u89D2\u8272
