修改 配置文件

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -111,9 +111,9 @@ centit.ip.home = http://productsvr.centit.com:8880/centit-ip/service/platform
 centit.ip.topoptid=METAFORM
 
 centit.jdbcplatform.enable = true
-centit.jdbcplatform.url =jdbc:oracle:thin:@192.168.131.102:1521:mipdb
-centit.jdbcplatform.username =JSSJTT
-centit.jdbcplatform.password =JSSJTT
+centit.jdbcplatform.url =jdbc:oracle:thin:@192.168.137.95:1521:orcl
+centit.jdbcplatform.username =framework
+centit.jdbcplatform.password =framework
 
 jdbc.show.sql=true
 #\u662F\u5426\u5141\u8BB8\u6CE8\u518C\u65B0\u7528\u6237
