--- a/framework-boot-demo/pom.xml
+++ b/framework-boot-demo/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-boot-demo</artifactId>
-    <version>4.6-SNAPSHOT</version>
+    <version>4.6.2007</version>
 
     <properties>
         <jdk.version>1.8</jdk.version>
