--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.6.2007</version>
+    <version>4.6-SNAPSHOT</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
@@ -22,8 +22,8 @@
     <url>https://github.com/ndxt/centit-framework</url>
 
     <properties>
-        <centit.persistence.version>1.3.2007</centit.persistence.version>
-        <centit.commons.version>2.3.2007</centit.commons.version>
+        <centit.persistence.version>1.3-SNAPSHOT</centit.persistence.version>
+        <centit.commons.version>2.3-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.1.2007</centit.ui.version>
     </properties>
 
