--- a/framework-boot-config/pom.xml
+++ b/framework-boot-config/pom.xml
@@ -40,14 +40,13 @@
 
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <artifactId>framework-system-static</artifactId>
+            <artifactId>framework-system-static-jdbc</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
 
