--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>centit-framework-dependencies</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>1.3.2101</version>
+        <version>5.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.centit.framework</groupId>
