完善文档编写

--- a/framework-adapter/pom.xml
+++ b/framework-adapter/pom.xml
@@ -32,13 +32,13 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${jdk.version}</version>
             <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
             <scope>system</scope>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
