--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -155,13 +155,13 @@
             <scope>test</scope>
         </dependency>
         <!-- server runtime library -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${jdk.version}</version>
             <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
             <scope>system</scope>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 </project>
