--- a/framework-system-static/pom.xml
+++ b/framework-system-static/pom.xml
@@ -35,13 +35,13 @@
         </dependency>
 
         <!-- server runtime library -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${jdk.version}</version>
             <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
             <scope>system</scope>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
