--- a/pom.xml
+++ b/pom.xml
@@ -118,10 +118,10 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArguments>
+                    <!--<compilerArguments>
                         <verbose />
                         <bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath>
-                    </compilerArguments>
+                    </compilerArguments>-->
                 </configuration>
             </plugin>
 
