--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -142,3 +142,28 @@ framework.x-frame-options.mode =
 
 
 
+#dubbo服务端配置 暂不支持多注册中心
+centit.dubbo.nacos.url=nacos://192.168.134.10:8848
+centit.dubbo.app.name=centit-provider
+centit.dubbo.provider.timeout=50000
+#dubbo协议配置
+centit.dubbo.dubboprotocol.name=dubbo
+centit.dubbo.dubboprotocol.server=
+centit.dubbo.dubboprotocol.port=20885
+#rmi协议配置
+centit.dubbo.rmiprotocol.name=rmi
+centit.dubbo.rmiprotocol.server=servlet
+centit.dubbo.rmiprotocol.port=21886
+#hessia协议配置
+centit.dubbo.hessianprotocol.name=hessian
+centit.dubbo.hessianprotocol.server=servlet
+#必填
+centit.dubbo.hessianprotocol.port=8087
+#非必填
+centit.dubbo.hessianprotocol.contextpath=file_server
+
+
+#dubbo 客户端 配置
+centit.dubbo.consumer.nacos.url=nacos://192.168.134.10:8848
+centit.dubbo.consumer.app.name=centit-consumer
+centit.dubbo.consumer.check=false
