--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.centit.support</groupId>
             <artifactId>centit-database</artifactId>
-            <version>${centit.commons.version}</version>
+            <version>${centit.version}</version>
         </dependency>
 
         <dependency>
