--- a/framework-session-core/pom.xml
+++ b/framework-session-core/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>com.centit.support</groupId>
             <artifactId>centit-database</artifactId>
-            <version>${centit.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
