--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -21,7 +21,11 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-spring-context</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-security</artifactId>
