--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -165,8 +165,8 @@
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${jdk.version}</version>
-            <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
             <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>-->
 
     </dependencies>
