--- a/framework-security-gm-plugin/pom.xml
+++ b/framework-security-gm-plugin/pom.xml
@@ -25,13 +25,13 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.64</version>
+            <artifactId>bcprov-jdk15to18</artifactId>
+            <version>1.71</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.64</version>
+            <artifactId>bcpkix-jdk15to18</artifactId>
+            <version>1.71</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
