--- a/framework-session-jdbc/pom.xml
+++ b/framework-session-jdbc/pom.xml
@@ -35,5 +35,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
