删除没有必要的基础包

--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -50,6 +50,17 @@
             <artifactId>spring-session-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
