--- a/framework-system-static-jdbc/pom.xml
+++ b/framework-system-static-jdbc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>framework-parent</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>5.2-SNAPSHOT</version>
+        <version>5.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,7 +23,7 @@
 
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <artifactId>centit-persistence-core</artifactId>
+            <artifactId>centit-persistence-jdbc</artifactId>
             <version>${project.version}</version>
         </dependency>
 
