--- a/framework-dubbo-server-config/pom.xml
+++ b/framework-dubbo-server-config/pom.xml
@@ -34,6 +34,10 @@
                     <groupId>io.netty</groupId>
                     <artifactId>netty-all</artifactId>
                 </exclusion>
+               <exclusion>
+                   <groupId>com.alibaba</groupId>
+                   <artifactId>fastjson</artifactId>
+               </exclusion>
             </exclusions>
         </dependency>
 
@@ -45,6 +49,10 @@
                 <exclusion>
                     <groupId>io.netty</groupId>
                     <artifactId>netty-all</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.alibaba</groupId>
+                    <artifactId>fastjson</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
