避免循环依赖，将centit-persistence-extend 迁移到framework工程中

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <module>framework-security-gm-plugin</module>
         <module>framework-session-redis</module>
         <module>framework-session-jdbc</module>
+        <module>centit-persistence-extend</module>
     </modules>
 
     <build>
