--- a/framework-dubbo-server-config/pom.xml
+++ b/framework-dubbo-server-config/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>framework-parent</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>5.4-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>framework-dubbo-server-config</artifactId>
