--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,7 @@
         <module>framework-adapter</module>
         <module>framework-core</module>
         <module>framework-config</module>
-        <module>framework-dubbo-server-config</module>
-        <module>framework-dubbo-client-config</module>
+        <module>framework-dubbo-config</module>
         <module>framework-filter</module>
         <module>framework-security</module>
         <module>framework-core-web</module>
