重构 session.redis 配置文件

--- a/framework-session-redis/pom.xml
+++ b/framework-session-redis/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
